--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<p class="align-left">注重細節，創造使用者能順暢使用的畫面</p>
 			</div>
 			<div class="col-skill">
-				<img src="images/icon/Painting.svg">
+				<img src="images/icon/painting.svg">
 				<h4>插畫設計</h4>
 				<p class="align-left">擅長描繪奇幻風格的插圖，與各種可愛的小物件</p>
 			</div>
