修正網頁載入時有殘影的問題
在modal加入display:none;載入後移除

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<li class="nav-item"><a class="link link1" href="#four">Gallery</a></li>
 					<li class="nav-item"><img class="nav-toggle" src="images/icon/nav_toggle.svg"></li>
 				</ul>
-				<div id="nav-modal" class="hide">
+				<div id="nav-modal" class="display_none hide">
 					<div class="modal">
 						<ul class="navbar2">
 							<li class=""><a class="nav_close">&times;</a></li>
@@ -99,7 +99,7 @@
 			<div class="col-project-photo">
 				<img class="project-img" src="images/meowmeowchat.jpg" alt="meowmeowchat">
 			</div>
-			<div id="project-modal" class="hide">
+			<div id="project-modal" class="display_none hide">
 				<div class="modal">
 					<div class="modal-content">
 						<img src="images/meowmeowchat.jpg" alt="meowmeowchat" style="width: 100%">
@@ -137,7 +137,7 @@
 			</div>
 		</div>
 
-		<div id="img-modal" class="hide">
+		<div id="img-modal" class="display_none hide">
 			<div class="modal">
 				<div class="modal-content">
 					<a class="modal_close">&times;</a>
