--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<section id="banner">
 				<div class="inner" >
 					<h2>Hi, I'm Chia-He Chiu</h2>
-					<h4>Front-End Developer</h4>
+					<h4>Front-End Web Developer</h4>
 					<img class="arrow-down" src="images/icon/arrow_down.svg">
 				</div>
 			</section>
