--- a/index.html
+++ b/index.html
@@ -1,158 +1,203 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="UTF-8">
-	<title>Chia-He Chiu</title>
-	<link href="images/icon/he.png" rel="shortcut icon">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/main.css">
-	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-</head>
-<body>
-	<div id="page-wrapper">
-		<header>
-			<nav class="navbar">
-				<ul class="navbar1">
-					<li class="nav-item nav-name">Chia-He Chiu</li>
-				</ul>
-				<ul class="navbar1 nav-right">
-					<li class="nav-item"><a class="link link1" href="#one">About Me</a></li>
-					<li class="nav-item"><a class="link link1" href="#three">Project</a></li>
-					<li class="nav-item"><a class="link link1" href="#four">Gallery</a></li>
-					<li class="nav-item"><img class="nav-toggle" src="images/icon/nav_toggle.svg"></li>
-				</ul>
-				<div id="nav-modal" class="display_none hide">
-					<div class="modal">
-						<ul class="navbar2">
-							<li class=""><a class="nav_close">&times;</a></li>
-							<li class=""><a class="link link2" href="#one">About Me</a></li>
-							<li class=""><a class="link link2" href="#three">Project</a></li>
-							<li class=""><a class="link link2" href="#four">Gallery</a></li>
-						</ul>
-					</div>
-				</div>
-			</nav>
-			<section id="banner">
-				<div class="inner" >
-					<h2>Hi, I'm Chia-He Chiu</h2>
-					<h4>Front-End Web Developer</h4>
-					<img class="arrow-down" src="images/icon/arrow_down.svg">
-				</div>
-			</section>
-		</header>
-		<!-- #One -->
-		<section id="one" class="decoration">
-			<h2>About Me</h2>
-			<div class="row">
-				<div class="col-aboutme-photo">
-					<img class="my-phote" src="images/DSC_0778..JPG" alt="Chia-He Chiu">
-				</div>
-				<div class="col-aboutme-text">
-					<h4>Chia-He Chiu / 邱佳禾</h4>
-					<p class="align-left">我畢業於台灣大學園藝暨景觀學系，因大三時修了網頁設計的課程，開啟了對網頁開發的興趣。
-					</br>
-					未來希望能作為一名前端工程師，讓使用網站的人們，能夠使用親切友善的介面。</p>
-				</br>
-				<ul>
-					<li><a href="https://github.com/didibear5" target="_blank"><img class="icon" src="images/icon/GitHub.svg" alt="github"></a><a href="https://www.linkedin.com/in/chia-he-chiu-92676816a" target="_blank"><img class="icon" src="images/icon/In.svg" alt="linkedin"></a></li>
-				</ul>
-				<ul>
-					<li></li>
-					<li><img class="icon" src="images/icon/noun_Phone_1979765.svg" alt="phone">+886 963 525 305</li>
-					<li><img class="icon" src="images/icon/noun_Mail_650805.svg" alt="mail">box5151@gmail.com</li>
-				</ul>
-			</div>	
-		</div>
-	</section>
-	<!-- #Two -->
-	<section id="two" class="decoration">
-		<h2>Expertise</h2>
-		<div class="row">
-			<div class="col-skill">
-				<img src="images/icon/web_design.svg">
-				<h4>前端開發</h4>
-				<p class="align-left">樂於吸收新的技術，讓開發的工作更有效率</p>
-			</div>
-			<div class="col-skill">
-				<img src="images/icon/ui_design.svg">
-				<h4>UI 設計</h4>
-				<p class="align-left">注重細節，創造使用者能順暢使用的畫面</p>
-			</div>
-			<div class="col-skill">
-				<img src="images/icon/painting.svg">
-				<h4>插畫設計</h4>
-				<p class="align-left">擅長描繪奇幻風格的插圖，與各種可愛的小物件</p>
-			</div>
-		</div>
-	</section>
-	<!-- #Three -->
-	<section id="three" class="decoration">
-		<h2>Project</h2>
-		<div class="row">
-			<div class="col-project-text">
-				<h4 style="">Meow Meow Chat</h4>
-				<p class="align-left">保有隱私的輕量級聊天室</p>
-				<p class="align-left">我主要負責介面設計與前端的部分。系統框架為Django，使用語言主要有JavaScript、jQuery、Python。
-				</p>
-				<a class="btn"href="https://github.com/didibear5/MeowMeowChat" target="_blank">Learn More</a>
-			</div>	
-			<div class="col-project-photo">
-				<img class="project-img" src="images/meowmeowchat.jpg" alt="meowmeowchat">
-			</div>
-			<div id="project-modal" class="display_none hide">
-				<div class="modal">
-					<div class="modal-content">
-						<img src="images/meowmeowchat.jpg" alt="meowmeowchat" style="width: 100%">
-						<a class="modal_close">&times;</a>
-					</div>	
-				</div>
-			</div>		
-		</div>
-	</section>
-	<!-- #Four -->
-	<section id="four" class="decoration">
-		<h2>Gallery</h2>
-		<div class="panels">
-			<div class="panel panel1">
-			</div>	
-			<div class="panel panel2">
-			</div>	
-			<div class="panel panel3">
-			</div>	
-			<div class="panel panel4">
-			</div>
-			<div class="panel panel5">
-			</div>
-			<div class="panel panel6">
-			</div>
-			<div class="panel panel7">
-			</div>
-			<div class="panel panel8">
-			</div>
-			<div class="panel panel9">
-			</div>
-			<div class="panel panel10">
-			</div>
-			<div class="panel panel11">
-			</div>
-		</div>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Chia-He Chiu</title>
+    <link href="images/icon/he.png" rel="shortcut icon" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div id="page-wrapper">
+      <header>
+        <nav class="navbar">
+          <ul class="navbar1">
+            <li class="nav-item nav-name">Chia-He Chiu</li>
+          </ul>
+          <ul class="navbar1 nav-right">
+            <li class="nav-item">
+              <a class="link link1" href="#one">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="link link1" href="#three">Project</a>
+            </li>
+            <li class="nav-item">
+              <a class="link link1" href="#four">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <img class="nav-toggle" src="images/icon/nav_toggle.svg" />
+            </li>
+          </ul>
+          <div id="nav-modal" class="display_none hide">
+            <div class="modal">
+              <ul class="navbar2">
+                <li class=""><a class="nav_close">&times;</a></li>
+                <li class=""><a class="link link2" href="#one">About Me</a></li>
+                <li class="">
+                  <a class="link link2" href="#three">Project</a>
+                </li>
+                <li class=""><a class="link link2" href="#four">Gallery</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+        <section id="banner">
+          <div class="inner">
+            <h2>Hi, I'm Chia-He Chiu</h2>
+            <h4>Front-End Web Developer</h4>
+            <img class="arrow-down" src="images/icon/arrow_down.svg" />
+          </div>
+        </section>
+      </header>
+      <!-- #One -->
+      <section id="one" class="decoration">
+        <h2>About Me</h2>
+        <div class="row">
+          <div class="col-aboutme-photo">
+            <img
+              class="my-photo"
+              src="images/DSC_0778..JPG"
+              alt="Chia-He Chiu"
+            />
+          </div>
+          <div class="col-aboutme-text">
+            <h4>Chia-He Chiu / 邱佳禾</h4>
+            <p class="align-left">
+              我畢業於台灣大學園藝暨景觀學系，因大三時修了網頁設計的課程，開啟了對網頁開發的興趣。
+              <!-- </br> -->
+              未來希望能作為一名前端工程師，讓使用網站的人們，能夠使用親切友善的介面。
+            </p>
+            <!-- </br> -->
+            <ul>
+              <li>
+                <a href="https://github.com/didibear5" target="_blank"
+                  ><img
+                    class="icon"
+                    src="images/icon/GitHub.svg"
+                    alt="github" /></a
+                ><a
+                  href="https://www.linkedin.com/in/chia-he-chiu-92676816a"
+                  target="_blank"
+                  ><img class="icon" src="images/icon/In.svg" alt="linkedin"
+                /></a>
+              </li>
+            </ul>
+            <ul>
+              <li></li>
+              <li>
+                <img
+                  class="icon"
+                  src="images/icon/noun_Phone_1979765.svg"
+                  alt="phone"
+                />+886 963 525 305
+              </li>
+              <li>
+                <img
+                  class="icon"
+                  src="images/icon/noun_Mail_650805.svg"
+                  alt="mail"
+                />box5151@gmail.com
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <!-- #Two -->
+      <section id="two" class="decoration">
+        <h2>Expertise</h2>
+        <div class="row">
+          <div class="col-skill">
+            <img src="images/icon/web_design.svg" />
+            <h4>前端開發</h4>
+            <p class="align-left">樂於吸收新的技術，讓開發的工作更有效率</p>
+          </div>
+          <div class="col-skill">
+            <img src="images/icon/ui_design.svg" />
+            <h4>UI 設計</h4>
+            <p class="align-left">注重細節，創造使用者能順暢使用的畫面</p>
+          </div>
+          <div class="col-skill">
+            <img src="images/icon/painting.svg" />
+            <h4>插畫設計</h4>
+            <p class="align-left">擅長描繪奇幻風格的插圖，與各種可愛的小物件</p>
+          </div>
+        </div>
+      </section>
+      <!-- #Three -->
+      <section id="three" class="decoration">
+        <h2>Project</h2>
+        <div class="row">
+          <div class="col-project-text">
+            <h4 style="">Meow Meow Chat</h4>
+            <p class="align-left">保有隱私的輕量級聊天室</p>
+            <p class="align-left">
+              我主要負責介面設計與前端的部分。系統框架為Django，使用語言主要有JavaScript、jQuery、Python。
+            </p>
+            <a
+              class="btn"
+              href="https://github.com/didibear5/MeowMeowChat"
+              target="_blank"
+              >Learn More</a
+            >
+          </div>
+          <div class="col-project-photo">
+            <img
+              class="project-img"
+              src="images/meowmeowchat.jpg"
+              alt="meowmeowchat"
+            />
+          </div>
+          <div id="project-modal" class="display_none hide">
+            <div class="modal">
+              <div class="modal-content">
+                <img
+                  src="images/meowmeowchat.jpg"
+                  alt="meowmeowchat"
+                  style="width: 100%"
+                />
+                <a class="modal_close">&times;</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- #Four -->
+      <section id="four" class="decoration">
+        <h2>Gallery</h2>
+        <div class="panels">
+          <div class="panel panel1"></div>
+          <div class="panel panel2"></div>
+          <div class="panel panel3"></div>
+          <div class="panel panel4"></div>
+          <div class="panel panel5"></div>
+          <div class="panel panel6"></div>
+          <div class="panel panel7"></div>
+          <div class="panel panel8"></div>
+          <div class="panel panel9"></div>
+          <div class="panel panel10"></div>
+          <div class="panel panel11"></div>
+        </div>
 
-		<div id="img-modal" class="display_none hide">
-			<div class="modal">
-				<div class="modal-content">
-					<a class="modal_close">&times;</a>
-				</div>	
-			</div>
-		</div>
-	</section>
-	<!-- Footer -->
-	<footer class="footer">
-		<img class="arrow-up" src="images/icon/arrow_up.svg">
-		<p>Copyright © 2018 by Chia-He Chiu.</p>
-	</footer>
-</div>
+        <div id="img-modal" class="display_none hide">
+          <div class="modal">
+            <div class="modal-content">
+              <a class="modal_close">&times;</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Footer -->
+      <footer class="footer">
+        <img class="arrow-up" src="images/icon/arrow_up.svg" />
+        <p>Copyright © 2018 by Chia-He Chiu.</p>
+      </footer>
+    </div>
 
-<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
-</body>
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+  </body>
 </html>
